frontend/modulecrediting/src/assets/mixins.scss
@mixin main() {
  max-width: 1450px;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  padding: 3.125rem 4.375rem;
  justify-content: center;
  align-items: flex-start;
  gap: 1.875rem;
}

@mixin verticalList($gapSize) {
  display: flex;
  flex-direction: column;
  @if $gapSize == small {
    gap: 0.625rem; 
  } @else if $gapSize == big{
    gap: 1.25rem; 
  }
}

@mixin verticalListItem($background-color) {
    background-color: $background-color;
    border-left: 3px solid $red;
  }

@mixin singleContainer() {
  width: fit-content;
  background-color: $white;
  display: flex;
  padding: 4.375rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2.5rem;
}

@mixin basicContainer() {
  width: auto;
  background-color: $white;
  padding: 0.9375rem 1.5625rem;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.625rem;
}

@mixin panelComponent() {
  width: 100%;
  padding: 0.625rem 0rem;
  background-color: $white;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 0.625rem;
}

@mixin screenSplit() {
  display: flex;
  align-items: flex-start;
  gap: 1.875rem;
}

@mixin rightArrow() {
  transform: rotate(-90deg);
}

@mixin smallHighlightBox() {
  width: max-content;
  padding: 0.625rem 1.125rem;
  border: none;

  display: flex;
  
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

